<resources>
    <string name="app_name">Parking Garage</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginErrorMesssage">The username or password is incorrect. Try again.</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="setUp">Set Up</string>
    <string name="title_activity_set_up">SetUpActivity</string>
    <string name="title_activity_manager_account_setup">ManagerAccountSetup</string>
    <string name="manager_account_setup_title">Set Up Manager Account</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="next">Next</string>
    <string name="title_activity_garage_setup">GarageSetupActivity</string>
    <string name="garage_setup_title">Garage Setup</string>
    <string name="garage_name">Garage Name</string>
    <string name="failed_login_dialog_title">Unable to Login</string>
    <string name="failed_login_dialog_message">The username or password is incorrect!</string>
    <string name="ok">OK</string>
    <string name="spaces_per_row">Spaces per Row</string>
    <string name="n_rows">Number of Rows</string>
    <string name="total_spaces">Total Spaces:</string>
    <string name="finish">Finish</string>
    <string name="title_activity_attendant">Vehicles</string>
    <string name="title_activity_attendants_list">Attendants List</string>
    <string name="title_activity_park">Park</string>
    <string name="title_activity_ticket">Ticket</string>
    <string name="title_activity_retrieve">Retrieve</string>
    <string name="title_activity_receipt">Receipt</string>
    <string name="title_activity_rates">RatesActivity</string>
</resources>
